Fix mq for firefox tablet size, which doesn't account for scrollbar.

--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -4,7 +4,7 @@
 
 $desktop-content-width: 64em;
 $desktop: 68em;
-$tablet: 43em;
+$tablet: 43.5em;
 
 /*--------------------------------------------------------------
 # Fonts
