--- a/style-human.css
+++ b/style-human.css
@@ -416,7 +416,7 @@ img {
   padding: 0.5em;
 }
 
-@media screen and (min-width: 43em) {
+@media screen and (min-width: 43.5em) {
   .hero-wrapper {
     position: relative;
     padding: 0 calc(50% - 280px);
@@ -905,7 +905,7 @@ img {
   font-family: "Londrina Solid", sans-serif;
 }
 
-@media screen and (min-width: 43em) {
+@media screen and (min-width: 43.5em) {
   .section--masthead {
     background: #cad9DF url(images/page-header_12_22b.svg) no-repeat center center;
     background-size: 1652px 141px;
@@ -997,7 +997,7 @@ img {
   text-decoration: underline;
 }
 
-@media screen and (min-width: 43em) {
+@media screen and (min-width: 43.5em) {
   .inner-content {
     background: #fefaf0;
     margin-bottom: 2em;
@@ -1039,7 +1039,7 @@ img {
  * template-parts/content-research-area.php
  * 
  */
-@media screen and (min-width: 43em) {
+@media screen and (min-width: 43.5em) {
   .entry-content--ra {
     margin-left: 12em;
     position: relative;
@@ -1175,7 +1175,7 @@ img {
   padding: 0.5em 1em;
 }
 
-@media screen and (min-width: 43em) {
+@media screen and (min-width: 43.5em) {
   #primary-menu > li:first-of-type {
     border: none;
     border-bottom: 1px solid green;
